DecafParser.py
# Generated from Decaf.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class DecafParser ( Parser ):

    grammarFileName = "Decaf.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'class'", "'Program'", "'if'", "'else'", 
                     "'for'", "'return'", "'break'", "'continue'", "'boolean'", 
                     "'char'", "'int'", "'string'", "'True'", "'False'", 
                     "'void'", "'callout'", "';'", "'{'", "'}'", "'['", 
                     "']'", "'('", "')'", "','", "'\"'", "'''", "'+'", "'-'", 
                     "'*'", "'/'", "'%'", "'&&'", "'||'", "'!'", "'>'", 
                     "'<'", "'>='", "'<='", "'='", "'+='", "'-='", "'=='", 
                     "'!='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "IF", "ELSE", 
                      "FOR", "RETURN", "BREAK", "CONTINUE", "BOOLEAN", "CHAR", 
                      "INT", "STRING", "TRUE", "FALSE", "VOID", "CALLOUT", 
                      "SEMICOLON", "LCURLY", "RCURLY", "LSQUARE", "RSQUARE", 
                      "LROUND", "RROUND", "COMMA", "QUOTES", "APOSTROPHE", 
                      "ADD", "SUB", "MULTIPLY", "DIVIDE", "REMINDER", "AND", 
                      "OR", "NOT", "GREATER_OP", "LESS_OP", "GREATER_eq_op", 
                      "LESS_eq_op", "EQUAL_OP", "ADD_eq_op", "SUB_eq_op", 
                      "EQUALITY_OP", "UNEQUALITY_OP", "ID", "ALPHA", "CHAR_LITERAL", 
                      "DECIMAL_LITERAL", "DIGIT", "HEX_LITERAL", "BOOL_LITERAL", 
                      "STRING_LITERAL", "ALPHA_NUM", "HEX_DIGIT", "LINE_COMMENT", 
                      "COMMENT", "NEWLINE", "WHITESPACE" ]

    RULE_program = 0
    RULE_var_id = 1
    RULE_array_id = 2
    RULE_equal_op = 3
    RULE_if_kw = 4
    RULE_else_kw = 5
    RULE_for_kw = 6
    RULE_lround = 7
    RULE_rround = 8
    RULE_lcurly = 9
    RULE_rcurly = 10
    RULE_void = 11
    RULE_not_sym = 12
    RULE_sub_sym = 13
    RULE_return_kw = 14
    RULE_callout_kw = 15
    RULE_break_kw = 16
    RULE_class_kw = 17
    RULE_program_kw = 18
    RULE_field_declr = 19
    RULE_field_var = 20
    RULE_method_declr = 21
    RULE_return_type = 22
    RULE_block = 23
    RULE_statement = 24
    RULE_vardeclr = 25
    RULE_method_call_inter = 26
    RULE_method_call = 27
    RULE_expr = 28
    RULE_location = 29
    RULE_callout_arg = 30
    RULE_int_literal = 31
    RULE_rel_op = 32
    RULE_eq_op = 33
    RULE_cond_op = 34
    RULE_literal = 35
    RULE_bin_op = 36
    RULE_arith_op = 37
    RULE_var_type = 38
    RULE_assign_op = 39
    RULE_method_name = 40

    ruleNames =  [ "program", "var_id", "array_id", "equal_op", "if_kw", 
                   "else_kw", "for_kw", "lround", "rround", "lcurly", "rcurly", 
                   "void", "not_sym", "sub_sym", "return_kw", "callout_kw", 
                   "break_kw", "class_kw", "program_kw", "field_declr", 
                   "field_var", "method_declr", "return_type", "block", 
                   "statement", "vardeclr", "method_call_inter", "method_call", 
                   "expr", "location", "callout_arg", "int_literal", "rel_op", 
                   "eq_op", "cond_op", "literal", "bin_op", "arith_op", 
                   "var_type", "assign_op", "method_name" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    IF=3
    ELSE=4
    FOR=5
    RETURN=6
    BREAK=7
    CONTINUE=8
    BOOLEAN=9
    CHAR=10
    INT=11
    STRING=12
    TRUE=13
    FALSE=14
    VOID=15
    CALLOUT=16
    SEMICOLON=17
    LCURLY=18
    RCURLY=19
    LSQUARE=20
    RSQUARE=21
    LROUND=22
    RROUND=23
    COMMA=24
    QUOTES=25
    APOSTROPHE=26
    ADD=27
    SUB=28
    MULTIPLY=29
    DIVIDE=30
    REMINDER=31
    AND=32
    OR=33
    NOT=34
    GREATER_OP=35
    LESS_OP=36
    GREATER_eq_op=37
    LESS_eq_op=38
    EQUAL_OP=39
    ADD_eq_op=40
    SUB_eq_op=41
    EQUALITY_OP=42
    UNEQUALITY_OP=43
    ID=44
    ALPHA=45
    CHAR_LITERAL=46
    DECIMAL_LITERAL=47
    DIGIT=48
    HEX_LITERAL=49
    BOOL_LITERAL=50
    STRING_LITERAL=51
    ALPHA_NUM=52
    HEX_DIGIT=53
    LINE_COMMENT=54
    COMMENT=55
    NEWLINE=56
    WHITESPACE=57

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def class_kw(self):
            return self.getTypedRuleContext(DecafParser.Class_kwContext,0)


        def program_kw(self):
            return self.getTypedRuleContext(DecafParser.Program_kwContext,0)


        def LCURLY(self):
            return self.getToken(DecafParser.LCURLY, 0)

        def RCURLY(self):
            return self.getToken(DecafParser.RCURLY, 0)

        def field_declr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafParser.Field_declrContext)
            else:
                return self.getTypedRuleContext(DecafParser.Field_declrContext,i)


        def method_declr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafParser.Method_declrContext)
            else:
                return self.getTypedRuleContext(DecafParser.Method_declrContext,i)


        def getRuleIndex(self):
            return DecafParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = DecafParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.class_kw()
            self.state = 83
            self.program_kw()
            self.state = 84
            self.match(DecafParser.LCURLY)
            self.state = 88
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 85
                    self.field_declr() 
                self.state = 90
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            self.state = 94
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DecafParser.BOOLEAN) | (1 << DecafParser.INT) | (1 << DecafParser.VOID))) != 0):
                self.state = 91
                self.method_declr()
                self.state = 96
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 97
            self.match(DecafParser.RCURLY)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_idContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(DecafParser.ID, 0)

        def getRuleIndex(self):
            return DecafParser.RULE_var_id

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_id" ):
                listener.enterVar_id(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_id" ):
                listener.exitVar_id(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_id" ):
                return visitor.visitVar_id(self)
            else:
                return visitor.visitChildren(self)




    def var_id(self):

        localctx = DecafParser.Var_idContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_var_id)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.match(DecafParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_idContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_id(self):
            return self.getTypedRuleContext(DecafParser.Var_idContext,0)


        def LSQUARE(self):
            return self.getToken(DecafParser.LSQUARE, 0)

        def int_literal(self):
            return self.getTypedRuleContext(DecafParser.Int_literalContext,0)


        def RSQUARE(self):
            return self.getToken(DecafParser.RSQUARE, 0)

        def getRuleIndex(self):
            return DecafParser.RULE_array_id

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArray_id" ):
                listener.enterArray_id(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArray_id" ):
                listener.exitArray_id(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray_id" ):
                return visitor.visitArray_id(self)
            else:
                return visitor.visitChildren(self)




    def array_id(self):

        localctx = DecafParser.Array_idContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_array_id)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.var_id()
            self.state = 102
            self.match(DecafParser.LSQUARE)
            self.state = 103
            self.int_literal()
            self.state = 104
            self.match(DecafParser.RSQUARE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Equal_opContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EQUAL_OP(self):
            return self.getToken(DecafParser.EQUAL_OP, 0)

        def getRuleIndex(self):
            return DecafParser.RULE_equal_op

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEqual_op" ):
                listener.enterEqual_op(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEqual_op" ):
                listener.exitEqual_op(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEqual_op" ):
                return visitor.visitEqual_op(self)
            else:
                return visitor.visitChildren(self)




    def equal_op(self):

        localctx = DecafParser.Equal_opContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_equal_op)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(DecafParser.EQUAL_OP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_kwContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(DecafParser.IF, 0)

        def getRuleIndex(self):
            return DecafParser.RULE_if_kw

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf_kw" ):
                listener.enterIf_kw(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf_kw" ):
                listener.exitIf_kw(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIf_kw" ):
                return visitor.visitIf_kw(self)
            else:
                return visitor.visitChildren(self)




    def if_kw(self):

        localctx = DecafParser.If_kwContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_if_kw)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.match(DecafParser.IF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Else_kwContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELSE(self):
            return self.getToken(DecafParser.ELSE, 0)

        def getRuleIndex(self):
            return DecafParser.RULE_else_kw

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElse_kw" ):
                listener.enterElse_kw(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElse_kw" ):
                listener.exitElse_kw(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElse_kw" ):
                return visitor.visitElse_kw(self)
            else:
                return visitor.visitChildren(self)




    def else_kw(self):

        localctx = DecafParser.Else_kwContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_else_kw)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.match(DecafParser.ELSE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class For_kwContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(DecafParser.FOR, 0)

        def getRuleIndex(self):
            return DecafParser.RULE_for_kw

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFor_kw" ):
                listener.enterFor_kw(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFor_kw" ):
                listener.exitFor_kw(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFor_kw" ):
                return visitor.visitFor_kw(self)
            else:
                return visitor.visitChildren(self)




    def for_kw(self):

        localctx = DecafParser.For_kwContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_for_kw)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(DecafParser.FOR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LroundContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LROUND(self):
            return self.getToken(DecafParser.LROUND, 0)

        def getRuleIndex(self):
            return DecafParser.RULE_lround

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLround" ):
                listener.enterLround(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLround" ):
                listener.exitLround(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLround" ):
                return visitor.visitLround(self)
            else:
                return visitor.visitChildren(self)




    def lround(self):

        localctx = DecafParser.LroundContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_lround)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.match(DecafParser.LROUND)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RroundContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RROUND(self):
            return self.getToken(DecafParser.RROUND, 0)

        def getRuleIndex(self):
            return DecafParser.RULE_rround

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRround" ):
                listener.enterRround(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRround" ):
                listener.exitRround(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRround" ):
                return visitor.visitRround(self)
            else:
                return visitor.visitChildren(self)




    def rround(self):

        localctx = DecafParser.RroundContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_rround)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(DecafParser.RROUND)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LcurlyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LCURLY(self):
            return self.getToken(DecafParser.LCURLY, 0)

        def getRuleIndex(self):
            return DecafParser.RULE_lcurly

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLcurly" ):
                listener.enterLcurly(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLcurly" ):
                listener.exitLcurly(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLcurly" ):
                return visitor.visitLcurly(self)
            else:
                return visitor.visitChildren(self)




    def lcurly(self):

        localctx = DecafParser.LcurlyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_lcurly)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(DecafParser.LCURLY)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RcurlyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RCURLY(self):
            return self.getToken(DecafParser.RCURLY, 0)

        def getRuleIndex(self):
            return DecafParser.RULE_rcurly

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRcurly" ):
                listener.enterRcurly(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRcurly" ):
                listener.exitRcurly(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRcurly" ):
                return visitor.visitRcurly(self)
            else:
                return visitor.visitChildren(self)




    def rcurly(self):

        localctx = DecafParser.RcurlyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_rcurly)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(DecafParser.RCURLY)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VoidContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VOID(self):
            return self.getToken(DecafParser.VOID, 0)

        def getRuleIndex(self):
            return DecafParser.RULE_void

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVoid" ):
                listener.enterVoid(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVoid" ):
                listener.exitVoid(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVoid" ):
                return visitor.visitVoid(self)
            else:
                return visitor.visitChildren(self)




    def void(self):

        localctx = DecafParser.VoidContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_void)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.match(DecafParser.VOID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Not_symContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NOT(self):
            return self.getToken(DecafParser.NOT, 0)

        def getRuleIndex(self):
            return DecafParser.RULE_not_sym

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNot_sym" ):
                listener.enterNot_sym(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNot_sym" ):
                listener.exitNot_sym(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNot_sym" ):
                return visitor.visitNot_sym(self)
            else:
                return visitor.visitChildren(self)




    def not_sym(self):

        localctx = DecafParser.Not_symContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_not_sym)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.match(DecafParser.NOT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Sub_symContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SUB(self):
            return self.getToken(DecafParser.SUB, 0)

        def getRuleIndex(self):
            return DecafParser.RULE_sub_sym

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSub_sym" ):
                listener.enterSub_sym(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSub_sym" ):
                listener.exitSub_sym(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSub_sym" ):
                return visitor.visitSub_sym(self)
            else:
                return visitor.visitChildren(self)




    def sub_sym(self):

        localctx = DecafParser.Sub_symContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_sub_sym)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(DecafParser.SUB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Return_kwContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(DecafParser.RETURN, 0)

        def getRuleIndex(self):
            return DecafParser.RULE_return_kw

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturn_kw" ):
                listener.enterReturn_kw(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturn_kw" ):
                listener.exitReturn_kw(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturn_kw" ):
                return visitor.visitReturn_kw(self)
            else:
                return visitor.visitChildren(self)




    def return_kw(self):

        localctx = DecafParser.Return_kwContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_return_kw)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.match(DecafParser.RETURN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Callout_kwContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CALLOUT(self):
            return self.getToken(DecafParser.CALLOUT, 0)

        def getRuleIndex(self):
            return DecafParser.RULE_callout_kw

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCallout_kw" ):
                listener.enterCallout_kw(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCallout_kw" ):
                listener.exitCallout_kw(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCallout_kw" ):
                return visitor.visitCallout_kw(self)
            else:
                return visitor.visitChildren(self)




    def callout_kw(self):

        localctx = DecafParser.Callout_kwContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_callout_kw)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.match(DecafParser.CALLOUT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Break_kwContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BREAK(self):
            return self.getToken(DecafParser.BREAK, 0)

        def getRuleIndex(self):
            return DecafParser.RULE_break_kw

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBreak_kw" ):
                listener.enterBreak_kw(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBreak_kw" ):
                listener.exitBreak_kw(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBreak_kw" ):
                return visitor.visitBreak_kw(self)
            else:
                return visitor.visitChildren(self)




    def break_kw(self):

        localctx = DecafParser.Break_kwContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_break_kw)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.match(DecafParser.BREAK)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_kwContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return DecafParser.RULE_class_kw

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClass_kw" ):
                listener.enterClass_kw(self)
